syntax = "proto3";

package ru.otus.numbers.generated;

option java_multiple_files = true;

message NumbersRange {
  int32 firstValue = 1;
  int32 lastValue = 2;
}

message NumberMessage {
  int32 number = 1;
}

service RemoteNumbersService {
  rpc generateNumbers(NumbersRange) returns (stream NumberMessage);
}